res/res_pjsip_mwi_body_generator.c
@@ -61,11 +61,11 @@ static int mwi_generate_body_content(void *body, void *data)
 
 	ast_str_append(mwi, 0, "Messages-Waiting: %s\r\n",
 			counter->new_msgs ? "yes" : "no");
-	ast_str_append(mwi, 0, "Voice-Message: %d/%d (0/0)\r\n",
-			counter->new_msgs, counter->old_msgs);
 	if (!ast_strlen_zero(counter->message_account))  {
 		ast_str_append(mwi, 0, "Message-Account: %s\r\n", counter->message_account);
 	}
+	ast_str_append(mwi, 0, "Voice-Message: %d/%d (0/0)\r\n",
+			counter->new_msgs, counter->old_msgs);
 
 	return 0;
 }
